--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,11 +7,30 @@
 
 <div class="articles">
     <div class="articles-main">
-        <app-card-big></app-card-big>
+        
+        <app-card-big 
+        photoCover="https://hermes.dio.me/articles/cover/6b63cf3d-951b-4e41-a538-9068deadde31.png"
+        cardTitle="Novo Artigo sobre IA"
+        cardSubtitle=" Inteligência Artificial e seu papel na cibersegurança"
+        >
+    </app-card-big>
+
     </div>
     <div class="articles-others">
-        <app-card-small></app-card-small>
-        <app-card-small></app-card-small>
-        <app-card-small></app-card-small>
+        <app-card-small
+        cardTitle="IA ajuda a Humanidade?"
+        photoCover="https://res.cloudinary.com/dte7upwcr/image/upload/v1677788739/blog/blog2/ia-criar-imagens/ia-criar-imagens.jpg"
+        >
+        </app-card-small>
+        <app-card-small
+        cardTitle="Cinema e Inteligência Artificial."
+        photoCover="https://2.bp.blogspot.com/-RIn2jkZ_gzI/WWxjcyAAqKI/AAAAAAAAFqQ/Py8aJ_mLRP0Bb9hre4UPot7p9Ug5lxgFwCLcBGAs/s1600/EX%2BMACHINA%2BNOTA%2BITPOP%2BCRITICA.png"
+        >
+        </app-card-small>
+        <app-card-small
+        cardTitle="Realidade Virtual quase Real."
+        photoCover="https://apiapp.sualuz.com.br/wp/wp-content/uploads/2023/02/oculos-de-realidade-virtual.webp"
+        >
+        </app-card-small>
     </div>
 </div>
