--- a/src/app/components/card-small/card-small.component.html
+++ b/src/app/components/card-small/card-small.component.html
@@ -3,14 +3,14 @@
     <div class="container_card-small-content">
         <div class="card-small__photo">
             <img 
-            src="https://hermes.dio.me/articles/cover/6b63cf3d-951b-4e41-a538-9068deadde31.png" 
+            src = "{{ photoCover}} "
             alt="photo"
             height="120px"
             srcset=""
             >
         </div>
         <div class="card-small__text">
-            <h1><a href="https://hermes.dio.me/articles/cover/6b63cf3d-951b-4e41-a538-9068deadde31.png">Novo Artigo sobre IA </a></h1>
+            <h1><a href="">{{ cardTitle }} </a></h1>
         </div>
     </div>
     <div class="container_card-small-divisor">
