--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,36 +1,69 @@
 
-<header>
-    <app-nav-bar></app-nav-bar>
-</header>
-
 <app-title></app-title>
 
 <div class="articles">
     <div class="articles-main">
-        
-        <app-card-big 
+        <h1 class="text-card-big">Artigos</h1>
+    <app-card-big 
+        id="1"
         photoCover="https://hermes.dio.me/articles/cover/6b63cf3d-951b-4e41-a538-9068deadde31.png"
         cardTitle="Novo Artigo sobre IA"
         cardSubtitle=" Inteligência Artificial e seu papel na cibersegurança"
         >
     </app-card-big>
-
     </div>
     <div class="articles-others">
         <app-card-small
+        id="2"
         cardTitle="IA ajuda a Humanidade?"
         photoCover="https://res.cloudinary.com/dte7upwcr/image/upload/v1677788739/blog/blog2/ia-criar-imagens/ia-criar-imagens.jpg"
         >
         </app-card-small>
         <app-card-small
+        id="3"
         cardTitle="Cinema e Inteligência Artificial."
         photoCover="https://2.bp.blogspot.com/-RIn2jkZ_gzI/WWxjcyAAqKI/AAAAAAAAFqQ/Py8aJ_mLRP0Bb9hre4UPot7p9Ug5lxgFwCLcBGAs/s1600/EX%2BMACHINA%2BNOTA%2BITPOP%2BCRITICA.png"
         >
         </app-card-small>
         <app-card-small
+        id="4"
         cardTitle="Realidade Virtual quase Real."
         photoCover="https://apiapp.sualuz.com.br/wp/wp-content/uploads/2023/02/oculos-de-realidade-virtual.webp"
         >
         </app-card-small>
     </div>
 </div>
+<div class="container__cat">
+        <h1 class="text-card-big">Favoritos</h1>
+        <hr/>
+    <div class="articles">
+        <div class="articles-main">
+        <app-card-big 
+            id="5"
+            photoCover="assets/livrosegatos.png"
+            cardTitle=""
+            cardSubtitle=""
+            >
+        </app-card-big>
+        </div>
+        <div class="articles-others">
+            <app-card-small
+            id="6"
+            cardTitle="Alice no país do pesadelo"
+            photoCover="https://1.bp.blogspot.com/-OFe7vGbJJb4/X2zwaXmRvsI/AAAAAAAAIME/dFDoX_9clLcxCT5Y5iXKEas78nyqbg9cgCLcBGAsYHQ/w1200-h630-p-k-no-nu/alice.png"
+            >
+            </app-card-small>
+            <app-card-small
+            id="7"
+            cardTitle="Todas as cores do céu"
+            photoCover="https://books.google.com.br/books/publisher/content?id=kCOQDwAAQBAJ&hl=pt-BR&pg=PP1&img=1&zoom=3&bul=1&sig=ACfU3U1Wn4i0ReuDXJlkA3CW2Ry0tFmJ9g&w=1280"
+            >
+            </app-card-small>
+            <app-card-small
+            id="8"
+            cardTitle="A gente mira no amor e acerta na solidão"
+            photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRC1c07Awpxih2p5Z-jV3tJML-5JG9wIZFSDryseSh65cnnsZkuRmH1f_zBOpKVdLQaDcE&usqp=CAU"
+            >
+            </app-card-small>
+        </div>
+       
