--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 
-<app-home></app-home>
+<header>
+    <app-nav-bar></app-nav-bar>
+</header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
