--- a/src/app/components/card-big/card-big.component.css
+++ b/src/app/components/card-big/card-big.component.css
@@ -10,6 +10,13 @@
     align-items: flex-start;
     justify-content: flex-start;
 }
+.container-card-big > h1 {
+    padding: 5px;
+}
+
+.container-card-big > hr {
+    margin-top: 5px;
+}
 
 .card-big__text > h1 {
     margin-top: 10px;
@@ -22,6 +29,7 @@
 }
 
 .card-big__photo > img{
+    margin-top: 5px;
     width: 100%;
     min-width: 400px;
 }
