--- a/src/app/components/card-small/card-small.component.html
+++ b/src/app/components/card-small/card-small.component.html
@@ -2,18 +2,19 @@
 
     <div class="container_card-small-content">
         <div class="card-small__photo">
+            <h1 class="card-small__tic"> ☆ ☆ ☆</h1>
             <img 
-            src = "{{ photoCover}} "
-            alt="photo"
-            height="120px"
-            srcset=""
+                src="{{photoCover}} "
+                alt=""
+                height="120px"
+                srcset=""
             >
         </div>
         <div class="card-small__text">
-            <h1><a href="">{{ cardTitle }} </a></h1>
+            <h1><a [routerLink]="['conteudo', Id]">{{ cardTitle }} </a></h1>
         </div>
     </div>
     <div class="container_card-small-divisor">
-        <hr>
+        <hr/>
     </div>
 </div>
