--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,5 +1,5 @@
 <div class="title-container">
     <hr/>
-        <h1>PROFILE DÉBORA</h1>
+    <h1><img src="assets/Blog-log.png" alt="" width="300px" class="photo"></h1>
     <hr/>
 </div>
