--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Roboto:ital,wght@0,100;0,300;0,500;1,700&display=swap');
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    background-color: #111111;
+    background-color:  rgb(54, 3, 61);
+    
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'ABeeZee', 'Roboto', 'sans-serif';
 }
 
 a {
